--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -22,7 +22,7 @@
   
         <!-- Sección 3 -->
         <div>
-          <h3 class="text-lg font-semibold mb-2">Contacto</h3>
+          <h3 class="text-lg font-semibold mb-2">Contacto De Empresa</h3>
           <p class="text-gray-400 text-sm">Email: contacto.com</p>
           <p class="text-gray-400 text-sm">Teléfono: +52 123 456 7890</p>
         </div>
