--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
       class="bg-white text-blue-600 px-4 py-2 rounded hover:bg-gray-200 transition"
       [routerLink]="['/home']"
     >
-      View Products
+      View 
     </button>
   </div>
 </header>
