--- a/src/app/components/register-user/register-user.component.html
+++ b/src/app/components/register-user/register-user.component.html
@@ -4,7 +4,7 @@
       
      
       <div class="hidden md:flex items-center justify-start">
-        <img src="assets/register-left.jpg" alt="Imagen izquierda" class="h-[550px] object-cover rounded-lg shadow-lg">
+        <img src="assets/users.png" alt="Imagen izquierda" class="h-[550px] object-cover rounded-lg shadow-lg">
       </div>
   
  
@@ -60,7 +60,7 @@
   
      
       <div class="hidden md:flex items-center justify-end">
-        <img src="assets/register-right.jpg" alt="Imagen derecha" class="h-[550px] object-cover rounded-lg shadow-lg">
+        <img src="assets/users.png" alt="Imagen derecha" class="h-[550px] object-cover rounded-lg shadow-lg">
       </div>
   
     </div>
